ES-011| changes after review