@@ -4,30 +4,35 @@ import com.wojciechbarwinski.demo.epic_board_games_shop.entities.OrderStatus;
 import com.wojciechbarwinski.demo.epic_board_games_shop.exceptions.OrderStatusChangeException;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static com.wojciechbarwinski.demo.epic_board_games_shop.entities.OrderStatus.*;
 
 @Component
 public class OrderStatusChangeValidation {
 
-    private final List<OrderStatus> allStatuses = Arrays.asList(OrderStatus.values());
+    private final Map<OrderStatus, List<OrderStatus>> allStatuses;
+
+    public OrderStatusChangeValidation() {
+        allStatuses = new HashMap<>();
+        allStatuses.put(PLACED, List.of(CONFIRMED, CANCELLED));
+        allStatuses.put(CONFIRMED, List.of(PAYMENT_VERIFICATION, CANCELLED));
+        allStatuses.put(PAYMENT_VERIFICATION, List.of(PAID, CANCELLED));
+        allStatuses.put(PAID, List.of(RECEIVED_BY_WAREHOUSE, CANCELLED));
+        allStatuses.put(RECEIVED_BY_WAREHOUSE, List.of(COMPLETED, CANCELLED));
+        allStatuses.put(COMPLETED, List.of(SHIPPED, CANCELLED));
+        allStatuses.put(SHIPPED, List.of(DELIVERED));
+        allStatuses.put(DELIVERED, List.of());
+    }
 
     public void assertOrderStatusTransitionIsAllowed(OrderStatus currentStatus, OrderStatus nextStatus) {
 
-        if (nextStatus == CANCELLED || (nextStatus == ON_HOLD && currentStatus != PLACED)) { //There should not be option to HOLD order which was not CONFIRMED
-            return;
+        List<OrderStatus> orderStatuses = allStatuses.get(currentStatus);
+
+        if (!orderStatuses.contains(nextStatus)) {
+            throw new OrderStatusChangeException(currentStatus, nextStatus);
         }
-
-        int currentIndex = allStatuses.indexOf(currentStatus);
-        int nextIndex = allStatuses.indexOf(nextStatus);
-
-        if (nextIndex - currentIndex == 1) {
-            return;
-        }
-
-
-        throw new OrderStatusChangeException(currentStatus, nextStatus);
     }
 }
